--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-pytorch-lightning
-torchvision
-wandb
+python-dotenv=="^1.0.1"
+torch=="^2.5.1"
+pytorch-lightning =="^2.4.0"
+wandb=="^0.18.7"
+torchvision=="^0.20.1"
+omegaconf=="^2.3.0"
+matplotlib=="^3.9.3"
+scikit-learn=="^1.5.2"
