--- a/params/autoencoder.yml
+++ b/params/autoencoder.yml
@@ -5,14 +5,12 @@ hyperparameters:
   epochs: 20
   latent_dim: 64
   scheduler:
-    type: None #PolynomialLR  # Options: PolynomialLR, ReduceLROnPlateau, None
-#    params:
-#      total_iters: 20
-#      power: 1.0
+    type: PolynomialLR  # Options: PolynomialLR, ReduceLROnPlateau, None
+    params:
+      total_iters: 20
+      power: 1.0
   optimizer:
     type: Adam
-additional_trainer_params:
-  auto_lr_find: true
 training:
   accelerator: "gpu"
   devices: 1
