Added Lipschitz-Penalty to solve oscillating loss

--- a/params/gan.yml
+++ b/params/gan.yml
@@ -1,9 +1,10 @@
 run_parameters:
-  experiment_name: "gan-100"
+  experiment_name: "gan-100-Lipschitz-Penalty"
 hyperparameters:
   lr: 2e-4
-  epochs: 50
+  epochs: 100
   latent_dim: 100
+  lambda_lp: 10  # Regularization coefficient for Lipschitz penalty
 training:
   accelerator: "gpu"
   devices: 1
